# xml_file_utils

./: .gitignore  README.md  cli.py  pyproject.toml  validate_service_fabric_service_manifest.py  validate_service_fabric_service_manifest.sublime-project  xml_file_utils.py
examples/: test_xml_file_1.xml  xml_edit_config.hocon
mgrandi/xml_file_utils/: application.py  utils.py
mgrandi/xml_file_utils/modules/: xml_edit.py  xsd_schema.py
