[tool.poetry]
name = "validate_service_fabric_service_manifest"
version = "0.1.0"
description = ""
authors = ["Mark Grandi <mgrandi@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.1"
arrow = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
