[tool.poetry]
name = "xml_file_utils"
version = "0.1.0"
description = "xml utility scripts"
authors = ["Mark Grandi <mgrandi@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.1"
arrow = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
